# Comunicacao_MPU6050_Lora__IOT_Embarcatech

./: CMakeLists.txt  README.md  lora_rx.c  lora_tx.c
lib/: mpu6050.c  mpu6050.h  rfm95_lora.c  rfm95_lora.h
